fix: apply isDisplaySnapDigit to gap guidelines #200

--- a/packages/react-moveable/src/App.css
+++ b/packages/react-moveable/src/App.css
@@ -91,7 +91,7 @@ img {
     position: absolute;
     top: 100px;
     left: 100px;
-    display: none;
+    /* display: none; */
 }
 .App svg * {
     transform-origin: 20% 50%;
